[Picture in Picture] Keep controls visible on mouse hover.

On Windows, hovering over the media controls triggers an ET_MOUSE_EXIT
MouseEvent. This is intended to only be caught when the mouse is
not within the video window bounds. On non-Windows, this is a noop.

Bug: 852131
Change-Id: I988d4483510c4eaafc9969edb26de407d77b0149
Reviewed-on: https://chromium-review.googlesource.com/1125139
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#572402}
Former-commit-id: 44a1d617105a981df9ddefc324e1a34adb068359